# temperature_forecaster

./: .gitignore  .run.py.swp  main.py  pyproject.toml  requirements.txt  run.py
charts/: Austin_tmax.html  Austin_tmin.html  Chicago.html  Chicago_tmin.html  Houston.html  Houston_tmin.html  LA.html  LA_tmin.html  Las Vegas.html  Las Vegas_tmin.html  Miami.html  Miami_tmin.html  NYC.html  NYC_tmin.html  Phoenix.html  Phoenix_tmin.html
charts/bias_variance/: Austin_tmax.html  Austin_tmin.html  Chicago_tmax.html  Chicago_tmin.html  Houston_tmax.html  Houston_tmin.html  LA_tmax.html  LA_tmin.html  Las Vegas_tmax.html  Las Vegas_tmin.html  Miami_tmax.html  Miami_tmin.html  NYC_tmax.html  NYC_tmin.html  Phoenix_tmax.html  Phoenix_tmin.html
charts/diagnostics/: Austin_tmax.html  Austin_tmin.html  Chicago_tmax.html  Chicago_tmin.html  Houston_tmax.html  Houston_tmin.html  LA_tmax.html  LA_tmin.html  Las Vegas_tmax.html  Las Vegas_tmin.html  Miami_tmax.html  Miami_tmin.html  NYC_tmax.html  NYC_tmin.html  Phoenix_tmax.html  Phoenix_tmin.html
data/processed/: Austin_tmax_weather_data.csv  Austin_tmin_weather_data.csv  Austin_weather_data.csv  Chicago_tmax_weather_data.csv  Chicago_tmin_weather_data.csv  Chicago_weather_data.csv  Houston_tmax_weather_data.csv  Houston_tmin_weather_data.csv  (+11 more)
notebooks/: experimentation.py
scripts/: calibration.py  execute_pipeline.py  obtain_probabilities.py  recompute_fourier_models.py  recompute_models.py  regenerate_data.py  run_diagnostics.py  temp_models.py  wipe_folder.py
tests/: validate_probability_distribution.py
(+80 files in other folders)
